--- a/Momiji V5/Properties/Resources.resx
+++ b/Momiji V5/Properties/Resources.resx
@@ -121,6 +121,12 @@
   <data name="ConsoleHeader" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\consoleheader.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="ConsoleScript" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ConsoleScript.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="ConsoleStyle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ConsoleStyle.css;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="MomijiIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bot-avatar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
